# blackballgame

./: .gitignore  Cargo.toml  Dockerfile  Earthfile  README.md  fly.toml  justfile  todo.md
.cargo/: config.toml
.github/workflows/: main.yml  static.yml
ai/: Cargo.toml
ai-client/: Cargo.toml
ai-client/src/: main.rs
ai/src/: lib.rs
api_types/: Cargo.toml
api_types/src/: lib.rs
bb-admin/: .env  Cargo.toml  Dioxus.toml  README.md  index.html  input.css  main.css  tailwind.config.js  todo.md
bb-admin/assets/: main.css  tailwind.css
bb-admin/public/: tailwind.css
bb-admin/src/: environment.rs  main.rs  server_client.rs  websocket.rs
bb-admin/src/components/: lobbylist.rs  mod.rs  state_provider.rs
bb-bevy/: Cargo.toml
bb-bevy/src/: main.rs  old_main.rs
bb-server/: .env  Cargo.toml
bb-server/src/: main.rs  websocket.rs
bb-web/: Cargo.toml  Dioxus.toml  README.md
bb-web/assets/: main.css
bb-web/blackballgame-client/: index.html
bb-web/public/: tailwind.css
bb-web/src/: main.rs
blackballgame-client/: Cargo.toml  Dioxus.toml  package-lock.json  package.json  pnpm-lock.yaml  vite.config.js
blackballgame-client/src/: App.jsx  App.tsx  constant.ts  main.rs  output.css
blackballgame-client/src/components/: Cards.jsx
blackballgame-server/: Cargo.toml
blackballgame-server/src/: client.rs  game.rs  main.rs  websocket.rs
blackballgame-server/src/admin/: mod.rs
client-bevy/: Cargo.toml
client-bevy/src/: main.rs
client-ggez/: Cargo.toml
client-ggez/src/: main.rs
common/: Cargo.toml  card_value_matrix.json
common/src/: ai.rs  client.rs  game.rs  lib.rs
common/src/snapshots/: common__game__tests__game_setup_and_round_end-2.snap  common__game__tests__game_setup_and_round_end-2.snap.new  common__game__tests__game_setup_and_round_end-3.snap  common__game__tests__game_setup_and_round_end.snap  common__game__tests__game_setup_and_round_end.snap.new  common__game__tests__start_round3-2.snap  common__game__tests__start_round3-2.snap.new  common__game__tests__start_round3-3.snap  common__game__tests__start_round3-4.snap  common__game__tests__start_round3.snap  common__game__tests__start_round3.snap.new  common__game__tests__take_snapshot.snap
docs/: CNAME  index.html
docs/assets/: tailwind.css
docs/wasm/: bb-admin.js  bb-admin.js.br  bb-admin_bg.wasm  bb-admin_bg.wasm.br
docs/wasm/snippets/dioxus-interpreter-js-161bb2cc5b21a4da/: inline0.js  inline0.js.br
docs/wasm/snippets/dioxus-interpreter-js-654dc4519bce26d0/: inline0.js  inline0.js.br
src/: main.rs
