[workspace]

resolver = "2" # Important! wgpu/Bevy needs this!

members = [
  "bb-server", # "blackballgame-client",  # "bb-bevy",  # "bb-web",  
  "ai-client",
  "common", # "client-bevy",  # "client-ggez",  
  "bb-admin",
  "api_types",
]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
