[package]
edition = "2021"
name = "ai-client"
version = "0.1.0"

[dependencies]
chrono = {version = "0.4.38", features = ["serde"]}
common = {path = "../common"}
futures-util = {version = "0.3", default-features = false, features = ["sink", "std"]}
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
# tokio = {version = "1.37.0", features = ["full"]}
tokio-tungstenite = "0.23.0"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"]}
