[package]
authors = ["Jeremy <jere.arde@gmail.com>"]
edition = "2021"
name = "bb-admin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = {version = "0.5", features = ["web"]}

# Debug
common = {path = "../common"}
dioxus-logger = "0.5.0"
reqwest = {version = "0.12.5", features = ["json"]}
tracing = "0.1.40"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
reqwest-websocket = "0.4.1"
futures-util = "0.3.30"
