[package]
authors = ["Jeremy <jere.arde@gmail.com>"]
edition = "2021"
name = "bb-admin"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

api_types = {path = "../api_types"}
chrono = "0.4.38"
common = {path = "../common"}
dioxus = {version = "0.5", features = ["web", "router"]}
dioxus-logger = "0.5.0"
dotenvy = "0.15.7"
futures-util = "0.3.30"
manganis = "0.2.2"
reqwest = {version = "0.12.5", features = ["json"]}
reqwest-websocket = "0.4.1"
serde = {version = "1.0.204", features = ["derive"]}
serde_json = "1.0.120"
tokio = {version = "1.39.2", features = ["time"]}
tracing = "0.1.40"
