[package]
name = "bb-web"
version = "0.1.0"
authors = ["Jeremy <jere.arde@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = { version = "0.5", features = ["web"] }

# Debug
tracing = "0.1.40"
dioxus-logger = "0.5.0"
serde = { version = "1.0.202", features = ["derive"] }
reqwest-websocket = "0.3.0"
