[package]
authors = ["Jeremy <jere.arde@gmail.com>"]
edition = "2021"
name = "bb-web"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = {version = "0.5", features = ["web"]}

# Debug
dioxus-logger = "0.5.0"
futures-util = {version = "0.3.30", features = ["sink", "std"]}
reqwest = {version = "0.12.4", features = ["blocking"]}
reqwest-websocket = "0.3.0"
serde = {version = "1.0.202", features = ["derive"]}
tracing = "0.1.40"
