[package]
authors = ["Jeremy <jere.arde@gmail.com>"]
edition = "2021"
name = "blackballgame-client"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

dioxus = {version = "0.5", features = ["web"]}
futures-util = {version = "0.3", default-features = false, features = ["sink", "std"]}
# tokio = "1.0"
# tokio-tungstenite = "0.21" // wont work with wasm...
reqwest-websocket = "0.3.0"

# Debug
console_error_panic_hook = "0.1.7"
dioxus-logger = "0.4.1"
log = "0.4.19"
reqwest = {version = "0.12", default-features = false}
