[package]
edition = "2021"
name = "blackballgame-server"
version = "0.1.0"

[dependencies]
axum = {version = "0.7.5", features = ["ws"]}
# dioxus = {version = "0.5.1", features = ["axum"]}
# dioxus-cli = "0.5.4"
# dioxus-fullstack = {version = "0.5.0-alpha.0"}
# dioxus-ssr = "0.5.1"
axum-extra = {version = "0.9.3", features = ["typed-header"]}
fastrand = "2.0.2"
futures-util = {version = "0.3", default-features = false, features = ["sink", "std"]}
serde = {version = "1.0.198", features = ["derive"]}
tokio = {version = "1.37.0", features = ["full"]}
tokio-tungstenite = "0.21"
tower = {version = "0.4", features = ["util"]}
tower-http = {version = "0.5.0", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"]}
