[package]
edition = "2021"
name = "blackballgame-server"
version = "0.1.0"

[dependencies]
# aes-gcm = "0.10.3"
axum = {version = "0.7.5", features = ["ws"]}
dioxus = {version = "0.5.1", features = ["axum", "fullstack"]}
# dioxus = {features = ["fullstack"], workspace = true}
# dioxus-fullstack = {version="0."}
# dioxus-cli = "0.5.4"
# dioxus-fullstack = {version = "0.5.0-alpha.0"}
# dioxus-ssr = "0.5.1"
axum-extra = {version = "0.9.3", features = ["typed-header"]}
# base64 = "0.22.1"
# bevy = "0.13.2"
api_types = {path = "../api_types"}
chrono = {version = "0.4.38", features = ["serde"]}
common = {path = "../common"}
# fastrand = "2.0.2"
anyhow = "1.0.86"
dioxus-fullstack = "0.5.2"
dioxus-ssr = "0.5.1"
futures-util = {version = "0.3", default-features = false, features = ["sink", "std"]}
include_dir = "0.7.4"
insta = "1.39.0"
mime_guess = "2.0.5"
nanoid = {git = "https://github.com/jeremyarde/nanoid"}
serde = {version = "1.0.198", features = ["derive"]}
serde_json = "1.0.116"
strum_macros = "0.26.4"
tokio = {version = "1.37.0", features = ["full", "tracing"]}
tokio-tungstenite = "0.21"
tower = {version = "0.4", features = ["util"]}
tower-http = {version = "0.5.0", features = ["full"]}
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", default-features = false, features = ["fmt", "ansi", "env-filter", "tracing-log"]}
console-subscriber = "0.4.0"
