[package]
edition = "2021"
name = "common"
version = "0.1.0"

[dependencies]
chrono = {version = "0.4.38", features = ["serde"]}
data-encoding = "2.6.0"
fastrand = "2.0.2"
nanoid = {git = "https://github.com/jeremyarde/nanoid"}
once_cell = "1.20.2"
serde = {version = "1.0.203", features = ["derive"]}
serde_json = "1.0.117"
tracing = "0.1.40"

[dev-dependencies]
insta = {version = "1.39.0", features = ["yaml", "redactions"]}
